@@ -4,13 +4,13 @@ Hash: SHA256
 DIST metric_fu-1.5.1.gem 93184 RMD160 ba9b5da09e078ff79e1eefad5dc96f25c4688602 SHA1 8dcfd6d2490279c74f8bf9e1688a612d3aa46a88 SHA256 e7c4686a6f2f3b3b2f4e3e5885111bf5071e940753788a2f89ea883857373c6e
 DIST metric_fu-2.1.1.gem 110592 RMD160 891866def4fdae1987bbb496031dd6b7d2bc0310 SHA1 1d8957bdd81c88a872962f6a470dcc3b3e3e2793 SHA256 6691963e9c65ef3b7a97fb87332b3dbca3cc402f0e2b12658a8af3dfadc91551
 EBUILD metric_fu-1.5.1.ebuild 1154 RMD160 3cb8fc67197187450364830f8c6f8be35c091f2e SHA1 3e2b11938cfd1b88cefbf715dd29211fa79d35b3 SHA256 00c82173e082cf502ee26963fa6167ac65782aff3915ef1c8fe0b36df3810b14
-EBUILD metric_fu-2.1.1.ebuild 1167 RMD160 3fa56e0523190d1d86a3ce2bb71e292039dc5455 SHA1 9bcf14acb9a78bf827389e6a85e3925c6d1a8d95 SHA256 7d20d40bda6843ae98964e79cc1434e4ab26f04fac3cb9c33884c67a62bfad72
-MISC ChangeLog 1411 RMD160 892705248c75e1598c8a73bd8928806b7f5be921 SHA1 7ebbe2626fae55bdebaca198aba701ed8ff517b7 SHA256 5cbe023f0558f0675c0cf541eedb99a487b5da6f6c5bf98012c99a5009d81cb2
+EBUILD metric_fu-2.1.1.ebuild 1319 RMD160 e13fd7bb4b793fbdd236b2c9ad94f5a8c20bc3ca SHA1 4c1fbc594c52fa1418ec640e2406b714c2431e37 SHA256 d54f9f862790acb6a6da6f8c687920a2acb0deea02c8846bc3e566e5b0e72a87
+MISC ChangeLog 1519 RMD160 d89a36e5dd1d531193139cfd0cabb78b88fbe53b SHA1 53206408fb61629258528639490d2420d38477a3 SHA256 b4a1340480ef9a705dda252cc543a7b993cf4e32018f88a1ab225da76e006930
 MISC metadata.xml 215 RMD160 682b22c57f2f17c789b244e2bb32fe15ca3fa332 SHA1 ccf017e39c3f44ac4b557da94f91096555cb1be2 SHA256 c058515dd6264789274b580e999ce4fbbb5c53c36a452bf7b32fd227980abcf8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk10wGQACgkQrnu0mw69JkqINAD/YP1Gk9VqVMosaA4nD5UZlQMl
-XWuhxnStwydSm3/2tk0A/2UJR+jB56ap10zf2kOTsehA2YcTUyoJ7U4zw6/hJbbe
-=xKY5
+iF4EAREIAAYFAk10w8kACgkQrnu0mw69JkpR6gEAj6GIrhCSdTjZDnUrbLr543Nk
+sSQP1m6wd3yGZwqcEGcA+wefFLwPE5Wo49wK5GZyrfma4A8NMpjjyRbyjQjh6akC
+=hNQK
 -----END PGP SIGNATURE-----
